feat: support Android 8 (lower minSdk to 26)
Lower minSdk from 28 to 26 so the app installs on Android 8.0+.

- Replace List.of/Set.of/Set.copyOf with Collections
  equivalents (native on API 26, no desugaring needed)
- Catch Throwable in TimestampUtils SAF fallback so missing
  java.nio.file classes degrade gracefully
- Annotate API 28+/34+ manifest entries with tools:targetApi
  for lint (ignored at runtime on API 26-27)
- Add docs/build.md with Debian JDK/SDK install and APK build steps